Linear student model with embeddings

--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (models.py, line 344)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/sachingr/anaconda3/envs/pytorch/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3418\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-ef353d92161c>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from models import *\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/sachingr/project/15740_Project/models.py\"\u001b[0;36m, line \u001b[0;32m344\u001b[0m\n\u001b[0;31m    m_out2 = m_outhe right amount of sub-indexing\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -27,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +69,7 @@
     "    max_tr_batch = -1\n",
     "    num_egs, batch_idx, n_ones = 0, 1, 0\n",
     "    for batch in data_iterator:\n",
+    "        print(batch.shape)\n",
     "        # we get the loss from passing the batch to the model\n",
     "        # each model will have it's own way of deadling with the data [we can jointly figure this out]\n",
     "        if eval_frac > 0:\n",
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,52 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Model of type : TRANSFORMER, Batchsz = 64, Learning Rate = 0.0001\n",
-      "{'Program Counter': 0, 'Set': 1, 'Belady Friendly': 2} True\n",
-      "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
-      "Logging Pre-Training Performance\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ldery/computer_architecture/15740_Project/models.py:307: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  x = torch.tensor(x_pc).cuda()\n",
-      "/home/ldery/computer_architecture/15740_Project/models.py:311: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  y = torch.tensor(y).float()\n",
-      "/home/ldery/computer_architecture/15740_Project/models.py:316: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  x_set = torch.tensor(x_set)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[XALANCBMK] Epoch[-1] : Loss 0.4804737613061055, Acc 0.9565462239583562, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[-1] : Loss 0.5480295109905695, Acc 0.8564736842105256, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.64 | Mean Acc : 0.9880695443645083 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[0] : Loss 0.0021745478288342675, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[0] : Loss 0.07771601115145084, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[1] : Loss 0.002378570947267161, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[1] : Loss 0.07512351756664239, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[2] : Loss 0.0030610627593811563, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[2] : Loss 0.07075387200732765, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[3] : Loss 0.0024227354774429455, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[3] : Loss 0.07398492529755459, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n",
-      "Min Acc 0.7 | Mean Acc : 0.9882853717026379 | Median Acc 1.0 | Max Acc 1.0 \n",
-      "[XALANCBMK] Epoch[4] : Loss 0.0020109958837366557, Acc 0.9998339843750002, Major [0] Acc 0.9044421855471219, Marjor [1] Acc 0.09555781445287699\n",
-      "[GRAPH] Epoch[4] : Loss 0.07809024428409574, Acc 0.988842105263158, Major [0] Acc 0.6489164574579926, Marjor [1] Acc 0.35108354254200774\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-674125182c37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mMODEL_TYPE\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodel_types\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mMODEL_DESC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"{}-{}_BSZ.{}_LR.{}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTR_DESC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMODEL_TYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBATCH_SZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m             \u001b[0mmodel_main\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-1bbaaa7bb15f>\u001b[0m in \u001b[0;36mmodel_main\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmodel_main\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSAVE_FLDR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSAVE_FLDR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mset_random_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRANDOM_SEED\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -309,9 +289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
