kd evaluation working

--- a/knowledge_distillation.ipynb
+++ b/knowledge_distillation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +160,15 @@
     "    for set_id, this_dataset in train_setwise_dataset.items():\n",
     "        teacher_model.remap_embedders(this_dataset, set_id)\n",
     "\n",
-    "#     tr_val_setwise_dataset = {k: train_setwise_dataset[k] for k in val_keys}\n",
-    "#     train_setwise_dataset = {k: train_setwise_dataset[k] for k in tr_keys}\n",
+    "    tr_val_setwise_dataset = {k: train_setwise_dataset[k] for k in val_keys}\n",
+    "    train_setwise_dataset = {k: train_setwise_dataset[k] for k in tr_keys}\n",
     "else:\n",
     "    teacher_model.prep_for_data(train_dataset, temp_order=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -209,10 +209,10 @@
       "  (loss_fn): CrossEntropyLoss()\n",
       "  (model): Sequential(\n",
       "    (0): Dropout(p=0.2, inplace=False)\n",
-      "    (1): Linear(in_features=128, out_features=2, bias=True)\n",
+      "    (1): Linear(in_features=32, out_features=2, bias=True)\n",
       "  )\n",
-      "  (pc_embedding): Embedding(500, 64)\n",
-      "  (set_occ_embedding): Embedding(500, 64)\n",
+      "  (pc_embedding): Embedding(500, 16, padding_idx=0)\n",
+      "  (set_occ_embedding): Embedding(500, 16, padding_idx=0)\n",
       ")\n"
      ]
     }
@@ -233,14 +233,14 @@
     "print(\"TC\",torch.cuda.is_available())\n",
     "student_model.use_cuda = torch.cuda.is_available()\n",
     "\n",
-    "# student_model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
+    "student_model.prep_for_data(train_setwise_dataset[max_key], temp_order=True)\n",
     "\n",
-    "student_model.pc_emb_map=copy.deepcopy(teacher_model.pc_emb_map) # clone\n",
-    "student_model.set_occ_emb_map= copy.deepcopy(teacher_model.set_occ_emb_map) # clone\n",
-    "student_model.setid_to_map_map=copy.deepcopy(teacher_model.setid_to_map_map) #clone\n",
+    "# student_model.pc_emb_map=copy.deepcopy(teacher_model.pc_emb_map) # clone\n",
+    "# student_model.set_occ_emb_map= copy.deepcopy(teacher_model.set_occ_emb_map) # clone\n",
+    "# student_model.setid_to_map_map=copy.deepcopy(teacher_model.setid_to_map_map) #clone\n",
     "\n",
-    "student_model.pc_embedding=nn.Embedding.from_pretrained(teacher_model.pc_embedding.weight.clone().detach(),freeze=True) \n",
-    "student_model.set_occ_embedding=nn.Embedding.from_pretrained(teacher_model.set_occ_embedding.weight.clone().detach(),freeze=True)# clone and detach\n",
+    "# student_model.pc_embedding=nn.Embedding.from_pretrained(teacher_model.pc_embedding.weight.clone().detach(),freeze=True) \n",
+    "# student_model.set_occ_embedding=nn.Embedding.from_pretrained(teacher_model.set_occ_embedding.weight.clone().detach(),freeze=True)# clone and detach\n",
     "\n",
     "# if(student_model_initialization==\"ST\"):\n",
     "    \n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,66 +265,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "distiller = VanillaKD(teacher_model, student_model,teacher_optimizer, student_optimizer,\n",
-    "                      train_setwise_dataset,BATCH_SZ,False,student_type=student_model_initialization,\n",
+    "                      train_setwise_dataset,tr_val_setwise_dataset,batch_size=BATCH_SZ,shuffle=False,student_type=student_model_initialization,\n",
     "                      distil_weight=0.5,temp=20.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Student...\n",
-      "Epoch: 0 | Student Average Accuracy:0.8262157119460981 Student Median Accuracy:0.9399999976158142 |Distillation Loss: 1.7535388469696045\n",
-      "Epoch: 0 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 1 | Student Average Accuracy:0.8674832308423148 Student Median Accuracy:0.9399999976158142 |Distillation Loss: 1.3704086542129517\n",
-      "Epoch: 1 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 2 | Student Average Accuracy:0.9006459364471168 Student Median Accuracy:0.9799999594688416 |Distillation Loss: 0.9420501589775085\n",
-      "Epoch: 2 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 3 | Student Average Accuracy:0.9179646448163562 Student Median Accuracy:1.0 |Distillation Loss: 1.100561261177063\n",
-      "Epoch: 3 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 4 | Student Average Accuracy:0.9267397828395595 Student Median Accuracy:1.0 |Distillation Loss: 0.8878437280654907\n",
-      "Epoch: 4 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 5 | Student Average Accuracy:0.9330164437647057 Student Median Accuracy:1.0 |Distillation Loss: 0.9550408720970154\n",
-      "Epoch: 5 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 6 | Student Average Accuracy:0.9370505700091049 Student Median Accuracy:1.0 |Distillation Loss: 0.884880781173706\n",
-      "Epoch: 6 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 7 | Student Average Accuracy:0.9383790282343016 Student Median Accuracy:1.0 |Distillation Loss: 0.6355677843093872\n",
-      "Epoch: 7 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 8 | Student Average Accuracy:0.9388787238282593 Student Median Accuracy:1.0 |Distillation Loss: 0.6379373669624329\n",
-      "Epoch: 8 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n",
-      "Epoch: 9 | Student Average Accuracy:0.9393662312712195 Student Median Accuracy:1.0 |Distillation Loss: 0.8146716356277466\n",
-      "Epoch: 9 | Teacher Average Accuracy:0.9430225392364279 Teacher Median Accuracy:1.0 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distiller.train_student(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating Student...\n",
+      "Student Average Accuracy:0.3015661859355816 Student Median Accuracy:0.03999999910593033 |Student Loss:1.4462884664535522\n"
+     ]
+    }
+   ],
    "source": [
-    "SAVE_FLDR=\"results\"\n",
-    "w_wo='with_embeddings_'\n",
-    "torch.save(distiller.student_model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR,'STUDENT_'+w_wo+student_model_initialization))"
+    "distiller.evaluate_student()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_FLDR=\"results\"\n",
+    "w_wo='without_embeddings_'\n",
+    "torch.save(distiller.student_model.state_dict(), '{}/{}_saved_model.pth'.format(SAVE_FLDR,'STUDENT_'+w_wo+student_model_initialization))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,31 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "teacher_size=model_size(distiller.teacher_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64258"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "student_size"
    ]
   },
   {
@@ -381,10 +351,30 @@
     {
      "data": {
       "text/plain": [
-       "461954"
+       "16066"
       ]
      },
      "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "461954"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
