lru trained graph transformer

--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "DATA_PATH = '../lru_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "TR_DESC = 'GRAPH'\n",
-    "EVAL_DATA_PATH = 'hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
+    "EVAL_DATA_PATH = '../hawkeye_trace_belady_xalancbmk.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "EVAL_DESC = 'XALANCBMK'\n",
     "SAVE_FLDR = 'results'\n",
     "N_EPOCHS = 5\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,25 +235,23 @@
      "text": [
       "Creating Model of type : TRANSFORMER, Batchsz = 64, Learning Rate = 0.0001\n",
       "{'Program Counter': 0, 'Set Occupancy': 1, 'Belady Friendly': 2} True\n",
-      "This is the average accuracy :  0.6618220085895503  From predicting all zeros\n",
+      "This is the average accuracy :  0.627640924995984  From predicting all zeros\n",
       "Logging Pre-Training Performance\n",
-      "[XALANCBMK] Epoch[-1] : Loss 0.8347451482033902, Acc 0.23767585164697635, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[-1] : Loss 0.8134684979802731, Acc 0.24458333333333332, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.89 | Mean Acc : 0.9522641527164227 | Median Acc 0.9572159090909091 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[0] : Loss 0.014977071287513338, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[0] : Loss 0.20673282063878354, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9252941176470588 | Mean Acc : 0.9619861035916343 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[1] : Loss 0.015025366871681232, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[1] : Loss 0.21528790955496582, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9247058823529412 | Mean Acc : 0.9620733569712469 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[2] : Loss 0.015057549764072333, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[2] : Loss 0.21180816443743286, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9011764705882352 | Mean Acc : 0.9603416753855692 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[3] : Loss 0.015814002520544837, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[3] : Loss 0.2009639328048665, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n",
-      "Min Acc 0.9158823529411765 | Mean Acc : 0.9613759464853134 | Median Acc 0.9593939393939394 | Max Acc 0.996875 \n",
-      "[XALANCBMK] Epoch[4] : Loss 0.014882609818554361, Acc 0.9980410242290749, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
-      "[GRAPH] Epoch[4] : Loss 0.2202480000470876, Acc 0.9635984848484849, Major [0] Acc 0.026021041058635064, Marjor [1] Acc 0.973978958941365\n"
+      "[XALANCBMK] Epoch[-1] : Loss 0.834745151269724, Acc 0.23767585164697635, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[-1] : Loss 0.8127845978077222, Acc 0.27885375494071146, Major [0] Acc 0.17564631539731995, Marjor [1] Acc 0.82435368460268\n",
+      "Min Acc 0.6891304347826087 | Mean Acc : 0.8922381466240142 | Median Acc 0.9008333333333334 | Max Acc 0.9848888888888889 \n",
+      "[XALANCBMK] Epoch[0] : Loss 4.605770146341937, Acc 0.07647852422907489, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[0] : Loss 2.9078957001446737, Acc 0.22847826086956521, Major [0] Acc 0.17564631539731995, Marjor [1] Acc 0.82435368460268\n",
+      "Min Acc 0.7611111111111111 | Mean Acc : 0.9118264208451506 | Median Acc 0.9410106382978722 | Max Acc 0.9848888888888889 \n",
+      "[XALANCBMK] Epoch[1] : Loss 0.9649610586607893, Acc 0.852962899229075, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[1] : Loss 1.2138064086522506, Acc 0.7872529644268775, Major [0] Acc 0.17564631539731995, Marjor [1] Acc 0.82435368460268\n",
+      "Min Acc 0.8530434782608696 | Mean Acc : 0.9453817145809629 | Median Acc 0.9580550343964978 | Max Acc 0.9818604651162791 \n",
+      "[XALANCBMK] Epoch[2] : Loss 1.0875235667326972, Acc 0.835619149229075, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[2] : Loss 1.0826492660135345, Acc 0.791600790513834, Major [0] Acc 0.17564631539731995, Marjor [1] Acc 0.82435368460268\n",
+      "Min Acc 0.9102402022756005 | Mean Acc : 0.955986672665677 | Median Acc 0.9632654949121184 | Max Acc 0.9977777777777778 \n",
+      "[XALANCBMK] Epoch[3] : Loss 1.5416601966621457, Acc 0.764056649229075, Major [0] Acc 0.06338080815081736, Marjor [1] Acc 0.9366191918491826\n",
+      "[GRAPH] Epoch[3] : Loss 1.1883094237944938, Acc 0.7762977602108037, Major [0] Acc 0.17564631539731995, Marjor [1] Acc 0.82435368460268\n",
+      "Min Acc 0.9109608091024021 | Mean Acc : 0.9594483345416459 | Median Acc 0.965975845410628 | Max Acc 0.9983333333333333 \n"
      ]
     }
    ],
@@ -294,13 +292,20 @@
     "print(len(values), dataset.shape, values.mean(), values.max(), values.min(), np.median(values))\n",
     "print(bc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -312,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
